--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -466,10 +466,10 @@
   "trimDatabase": "Trim Database",
   "trimDatabaseDescription": "Reduces your message database size to your last 10,000 messages.",
   "trimDatabaseConfirmationBody": "Are you sure you want to delete your $deleteAmount$ oldest received messages?",
-  "reportAsSpam": "REPORT AS SPAM",
   "messageRequestPending": "Your message request is currently pending",
   "messageRequestAccepted": "Your message request has been accepted",
   "messageRequestAcceptedOurs": "You have accepted $name$'s message request",
+  "messageRequestAcceptedOursNoName": "You have accepted the message request",
   "declineRequestMessage": "Are you sure you want to decline this message request?",
   "respondingToRequestWarning": "Sending a message to this user will automatically accept their message request and reveal your Session ID."
 }
