Disallow disappearing messages if convo is not approved by recipient.

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -474,5 +474,6 @@
   "openMessageRequestInbox": "View Message Requests",
   "noMessageRequestsPending": "No pending message requests",
   "noMediaUntilApproved": "You cannot send attachments until the conversation is approved",
+  "mustBeApproved": "This conversation must be accepted to use this feature",
   "openMessageRequestInboxDescription": "View your Message Request inbox"
 }
