Adding rightclick accept/decline menu options for message requests. Adding hide menu item for message request banner.

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -478,5 +478,6 @@
   "youHaveANewFriendRequest": "You have a new friend request",
   "clearAllConfirmationTitle": "Clear All Message Requests",
   "clearAllConfirmationBody": "Are you sure you want to clear all message requests?",
+  "hideBanner": "Hide",
   "openMessageRequestInboxDescription": "View your Message Request inbox"
 }
