When deleting multiple messages, inform the user of the number
taken from #2263 by @ianmacd

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -94,7 +94,7 @@
   "messageDeletionForbidden": "You don’t have permission to delete others’ messages",
   "deleteJustForMe": "Delete just for me",
   "deleteForEveryone": "Delete for everyone",
-  "deleteMessagesQuestion": "Delete those messages?",
+  "deleteMessagesQuestion": "Delete $count$ messages?",
   "deleteMessageQuestion": "Delete this message?",
   "deleteMessages": "Delete Messages",
   "deleted": "Deleted",
