Report number of deletions when a deletion operation completes.

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -97,7 +97,7 @@
   "deleteMessagesQuestion": "Delete $count$ messages?",
   "deleteMessageQuestion": "Delete this message?",
   "deleteMessages": "Delete Messages",
-  "deleted": "Deleted",
+  "deleted": "$count$ deleted",
   "messageDeletedPlaceholder": "This message has been deleted",
   "from": "From:",
   "to": "To:",
