Add setting to specify minimum age of open group messages to prune.
When an open group has more than 2000 messages, those older than the
specified number of months will be pruned on application start-up.

Fixes #2310.

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -137,6 +137,10 @@
   "typingIndicatorsSettingDescription": "See and share when messages are being typed (applies to all sessions).",
   "typingIndicatorsSettingTitle": "Typing Indicators",
   "zoomFactorSettingTitle": "Zoom Factor",
+  "pruneSettingTitle": "Prune Old Open Group Messages",
+  "pruneSettingDescription": "When Session starts, prune messages older than this from groups with > 2000 messages (0 = no pruning)",
+  "pruneSettingUnit": "month",
+  "pruneSettingUnits": "months",
   "notificationSettingsDialog": "When messages arrive, display notifications that reveal...",
   "disableNotifications": "Mute notifications",
   "nameAndMessage": "Name and content",
