feat: ask user for opengroup pruning on/off

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -138,9 +138,12 @@
   "typingIndicatorsSettingTitle": "Typing Indicators",
   "zoomFactorSettingTitle": "Zoom Factor",
   "pruneSettingTitle": "Prune Old Open Group Messages",
-  "pruneSettingDescription": "When Session starts, prune messages older than this from groups with > 2000 messages (0 = no pruning)",
-  "pruneSettingUnit": "month",
-  "pruneSettingUnits": "months",
+  "pruneSettingDescription": "Prune messages older than 6 months from Open Groups on start",
+  "pruningOpengroupDialogTitle": "Open group pruning",
+  "pruningOpengroupDialogMessage": "Pruning old open group messages improves performance. Enable pruning for open group messages older than 6 months?",
+  "pruningOpengroupDialogSubMessage": "You can change this setting in the Session settings menu",
+  "enable": "Enable",
+  "keepDisabled": "Keep disabled",
   "notificationSettingsDialog": "When messages arrive, display notifications that reveal...",
   "disableNotifications": "Mute notifications",
   "nameAndMessage": "Name and content",
